add basic validation

--- a/src/BddBundle/Resources/views/Coaster/create.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/create.html.twig
@@ -1,4 +1,2 @@
 {{ form_errors(form) }}
-{{ form_start(form) }}
-{{ form_widget(form) }}
-{{ form_end(form) }}
+{{ form(form, {'attr': {'novalidate': 'novalidate'}}) }}
