--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -55,7 +55,7 @@
         <!-- Main content -->
         <div class="content-wrapper">
 
-            {{ include('::page_header.html.twig') }}
+            {% include '::page_header.html.twig' with vars %}
 
             <!-- Content area -->
             <div class="content">
