--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -1,11 +1,69 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}BddBundle:Coaster:coaster{% endblock %}
+{% block title %}{{ coaster.name }} - {{ coaster.park.name }}{% endblock %}
+
+{% set vars = {'title': coaster.name, 'subTitle': coaster.park.name} %}
 
 {% block body %}
-<h1>{{ coaster.name }}</h1>
-Hauteur : {{ coaster.builtCoaster.height }}
-Longueur : {{ coaster.builtCoaster.length }}
-Hauteur : {{ coaster.builtCoaster.speed }}
-Hauteur : {{ coaster.builtCoaster.inversionsNumber }}
+    <div class="row">
+        <div class="col-sm-6 col-md-3">
+            <div class="panel panel-body bg-blue-400 has-bg-image">
+                <div class="media no-margin">
+                    <div class="media-body">
+                        <h3 class="no-margin">{{ coaster.builtCoaster.height }}m</h3>
+                        <span class="text-uppercase text-size-mini">Hauteur</span>
+                    </div>
+
+                    <div class="media-right media-middle">
+                        <i class="icon-bubbles4 icon-3x opacity-75"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 col-md-3">
+            <div class="panel panel-body bg-danger-400 has-bg-image">
+                <div class="media no-margin">
+                    <div class="media-body">
+                        <h3 class="no-margin">{{ coaster.builtCoaster.speed }}km/h</h3>
+                        <span class="text-uppercase text-size-mini">Vitesse</span>
+                    </div>
+
+                    <div class="media-right media-middle">
+                        <i class="icon-bag icon-3x opacity-75"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 col-md-3">
+            <div class="panel panel-body bg-success-400 has-bg-image">
+                <div class="media no-margin">
+                    <div class="media-left media-middle">
+                        <i class="icon-pointer icon-3x opacity-75"></i>
+                    </div>
+
+                    <div class="media-body text-right">
+                        <h3 class="no-margin">{{ coaster.builtCoaster.length }}m</h3>
+                        <span class="text-uppercase text-size-mini">Longueur</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 col-md-3">
+            <div class="panel panel-body bg-indigo-400 has-bg-image">
+                <div class="media no-margin">
+                    <div class="media-left media-middle">
+                        <i class="icon-enter6 icon-3x opacity-75"></i>
+                    </div>
+
+                    <div class="media-body text-right">
+                        <h3 class="no-margin">{{ coaster.builtCoaster.inversionsNumber }}</h3>
+                        <span class="text-uppercase text-size-mini">Inversions</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
