--- a/app/Resources/views/page_header.html.twig
+++ b/app/Resources/views/page_header.html.twig
@@ -1,11 +1,15 @@
 <div class="page-header page-header-default">
     <div class="page-header-content">
         <div class="page-title">
-            <h4><i class="icon-arrow-left52 position-left"></i> <span class="text-semibold">Starters</span> - Fixed Layout</h4>
+            <h4><i class="icon-arrow-left52 position-left"></i>
+                <span class="text-semibold">{{ title }}</span>
+                {% if subTitle %} - {{ subTitle }}{% endif %}
+            </h4>
         </div>
 
         <div class="heading-elements">
-            <a href="#" class="btn btn-labeled btn-labeled-right bg-blue heading-btn">Button <b><i class="icon-menu7"></i></b></a>
+            <a href="#" class="btn btn-labeled btn-labeled-right bg-blue heading-btn">Button <b><i
+                            class="icon-menu7"></i></b></a>
         </div>
     </div>
 
