--- a/app/Resources/views/page_header.html.twig
+++ b/app/Resources/views/page_header.html.twig
@@ -4,6 +4,8 @@
             <h4><i class="icon-arrow-left52 position-left"></i>
                 <span class="text-semibold">{{ title }}</span>
                 {% if subTitle %} - {{ subTitle }}{% endif %}
+                &nbsp;
+                <span class="label label-success">{{ labelTitle }}</span>
             </h4>
         </div>
 
