--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -2,65 +2,169 @@
 
 {% block title %}{{ coaster.name }} - {{ coaster.park.name }}{% endblock %}
 
-{% set vars = {'title': coaster.name, 'subTitle': coaster.park.name} %}
+{% set vars = {'title': coaster.name, 'subTitle': coaster.park.name, 'labelTitle': coaster.status.name} %}
 
 {% block body %}
-    <div class="row">
-        <div class="col-sm-6 col-md-3">
-            <div class="panel panel-body bg-blue-400 has-bg-image">
-                <div class="media no-margin">
-                    <div class="media-body">
-                        <h3 class="no-margin">{{ coaster.builtCoaster.height }}m</h3>
-                        <span class="text-uppercase text-size-mini">Hauteur</span>
+    <div class="sidebar-detached">
+        <div class="sidebar sidebar-default sidebar-separate">
+            <div class="sidebar-content">
+                <!-- Course details -->
+                <div class="sidebar-category">
+                    <div class="category-title">
+                        <span>Caractéristiques de {{ coaster.name }}</span>
+                        <ul class="icons-list">
+                            <li><a href="#" data-action="collapse"></a></li>
+                        </ul>
                     </div>
 
-                    <div class="media-right media-middle">
-                        <i class="icon-bubbles4 icon-3x opacity-75"></i>
+                    <div class="category-content">
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">Hauteur:</label>
+                            <div class="pull-right">{{ coaster.builtCoaster.height }}m</div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">Vitesse:</label>
+                            <div class="pull-right">{{ coaster.builtCoaster.speed }}km/h</div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">Longueur:</label>
+                            <div class="pull-right">{{ coaster.builtCoaster.height }}m</div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">Nombre d'inversions:</label>
+                            <div class="pull-right">{{ coaster.builtCoaster.inversionsNumber }}</div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">Statut:</label>
+                            <div class="pull-right"><span class="label bg-green">{{ coaster.status.name }}</span></div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">Date d'ouverture:</label>
+                            <div class="pull-right">
+                                {% if coaster.openingDate|date("dm") == "0101" %}
+                                    {{ coaster.openingDate|date("Y") }}
+                                {% else %}
+                                    {{ coaster.openingDate|date("d/m/Y") }}
+                                {% endif %}
+                            </div>
+                        </div>
+                        {% if coaster.closingDate %}
+                            <div class="form-group">
+                                <label class="control-label no-margin text-semibold">Date de fermeture:</label>
+                                <div class="pull-right">
+                                    {% if coaster.closingDate|date("dm") == "0101" %}
+                                        {{ coaster.closingDate|date("Y") }}
+                                    {% else %}
+                                        {{ coaster.closingDate|date("d/m/Y") }}
+                                    {% endif %}
+                                </div>
+                            </div>
+                        {% endif %}
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">Parc:</label>
+                            <div class="pull-right">{{ coaster.park.name }}</div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">Pays:</label>
+                            <div class="pull-right">{{ coaster.park.country.name }}</div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label no-margin text-semibold">Note:</label>
+                            <div class="pull-right">
+                                <i class="icon-star-full2 text-size-base text-warning-300"></i>
+                                <i class="icon-star-full2 text-size-base text-warning-300"></i>
+                                <i class="icon-star-full2 text-size-base text-warning-300"></i>
+                                <i class="icon-star-full2 text-size-base text-warning-300"></i>
+                                <i class="icon-star-full2 text-size-base text-warning-300"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /course details -->
+            </div>
+        </div>
+    </div>
+
+    <div class="container-detached">
+        <div class="content-detached">
+            <div class="row">
+                <div class="col-sm-6 col-md-3">
+                    <div class="panel panel-body bg-blue-400 has-bg-image">
+                        <div class="media no-margin">
+                            <div class="media-body">
+                                <h3 class="no-margin">{{ coaster.builtCoaster.height }}m</h3>
+                                <span class="text-uppercase text-size-mini">Hauteur</span>
+                            </div>
+
+                            <div class="media-right media-middle">
+                                <i class="icon-bubbles4 icon-3x opacity-75"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3">
+                    <div class="panel panel-body bg-danger-400 has-bg-image">
+                        <div class="media no-margin">
+                            <div class="media-body">
+                                <h3 class="no-margin">{{ coaster.builtCoaster.speed }}km/h</h3>
+                                <span class="text-uppercase text-size-mini">Vitesse</span>
+                            </div>
+
+                            <div class="media-right media-middle">
+                                <i class="icon-bag icon-3x opacity-75"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3">
+                    <div class="panel panel-body bg-success-400 has-bg-image">
+                        <div class="media no-margin">
+                            <div class="media-left media-middle">
+                                <i class="icon-pointer icon-3x opacity-75"></i>
+                            </div>
+
+                            <div class="media-body text-right">
+                                <h3 class="no-margin">{{ coaster.builtCoaster.length }}m</h3>
+                                <span class="text-uppercase text-size-mini">Longueur</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3">
+                    <div class="panel panel-body bg-indigo-400 has-bg-image">
+                        <div class="media no-margin">
+                            <div class="media-left media-middle">
+                                <i class="icon-enter6 icon-3x opacity-75"></i>
+                            </div>
+
+                            <div class="media-body text-right">
+                                <h3 class="no-margin">{{ coaster.builtCoaster.inversionsNumber }}</h3>
+                                <span class="text-uppercase text-size-mini">Inversions</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <!-- Youtube -->
+                    <div class="panel panel-flat">
+                        <div class="panel-heading">
+                            <h5 class="panel-title">Video</h5>
+                        </div>
 
-        <div class="col-sm-6 col-md-3">
-            <div class="panel panel-body bg-danger-400 has-bg-image">
-                <div class="media no-margin">
-                    <div class="media-body">
-                        <h3 class="no-margin">{{ coaster.builtCoaster.speed }}km/h</h3>
-                        <span class="text-uppercase text-size-mini">Vitesse</span>
-                    </div>
-
-                    <div class="media-right media-middle">
-                        <i class="icon-bag icon-3x opacity-75"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="panel panel-body bg-success-400 has-bg-image">
-                <div class="media no-margin">
-                    <div class="media-left media-middle">
-                        <i class="icon-pointer icon-3x opacity-75"></i>
-                    </div>
-
-                    <div class="media-body text-right">
-                        <h3 class="no-margin">{{ coaster.builtCoaster.length }}m</h3>
-                        <span class="text-uppercase text-size-mini">Longueur</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3">
-            <div class="panel panel-body bg-indigo-400 has-bg-image">
-                <div class="media no-margin">
-                    <div class="media-left media-middle">
-                        <i class="icon-enter6 icon-3x opacity-75"></i>
-                    </div>
-
-                    <div class="media-body text-right">
-                        <h3 class="no-margin">{{ coaster.builtCoaster.inversionsNumber }}</h3>
-                        <span class="text-uppercase text-size-mini">Inversions</span>
+                        <div class="panel-body">
+                            <div class="content-group-lg">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="embed-responsive-item"
+                                            src="https://www.youtube.com/embed/vlDzYIIOYmM"
+                                            frameborder="0" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
