--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -166,50 +166,50 @@
                     </div>
                 </div>
             </div>
-            {#<div class="row">#}
-            {#<div class="col-sm-6">#}
-            {#<!-- Youtube -->#}
-            {#<div class="panel panel-flat">#}
-            {#<div class="panel-heading">#}
-            {#<h5 class="panel-title">Video</h5>#}
-            {#</div>#}
+            <div class="row">
+                <div class="col-sm-6">
+                    <!-- Youtube -->
+                    <div class="panel panel-flat">
+                        <div class="panel-heading">
+                            <h5 class="panel-title">Video</h5>
+                        </div>
 
-            {#<div class="panel-body">#}
-            {#<div class="content-group-lg">#}
-            {#<div class="embed-responsive embed-responsive-16by9">#}
-            {#<iframe class="embed-responsive-item"#}
-            {#src="https://www.youtube.com/embed/vlDzYIIOYmM"#}
-            {#frameborder="0" allowfullscreen></iframe>#}
-            {#</div>#}
-            {#</div>#}
-            {#</div>#}
-            {#</div>#}
-            {#</div>#}
-            {#{% if coaster.latitude and coaster.longitude %}#}
-            {#<div class="col-sm-6">#}
-            {#<div class="panel panel-flat">#}
-            {#<div class="panel-heading">#}
-            {#<h5 class="panel-title">Localisation</h5>#}
-            {#</div>#}
+                        <div class="panel-body">
+                            <div class="content-group-lg">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="embed-responsive-item"
+                                            src="https://www.youtube.com/embed/vlDzYIIOYmM"
+                                            frameborder="0" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% if coaster.latitude and coaster.longitude %}
+                    <div class="col-sm-6">
+                        <div class="panel panel-flat">
+                            <div class="panel-heading">
+                                <h5 class="panel-title">Localisation</h5>
+                            </div>
 
-            {#<div class="panel-body">#}
-            {#<div id="map-coaster" class="map-container"></div>#}
-            {#</div>#}
-            {#</div>#}
-            {#</div>#}
-            {#{% endif %}#}
-            {#</div>#}
+                            <div class="panel-body">
+                                <div id="map-coaster" class="map-container"></div>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
             {% if images|length > 0 %}
                 {% for row in images|batch(4) %}
                     <div class="row">
-                        {% for image in row %}
+                        {% for imagePath in row %}
                             <div class="col-lg-3 col-sm-6">
                                 <div class="thumbnail">
                                     <div class="thumb">
-                                        <img src="{{ asset(image) }}" alt="">
+                                        <img src="{{ asset(imagePath) | imagine_filter('thumb_coaster') }}" alt="">
                                         <div class="caption-overflow">
 										<span>
-											<a href="{{ asset(image) }}" data-popup="lightbox" rel="gallery"
+											<a href="{{ asset(imagePath) }}" data-popup="lightbox" rel="gallery"
                                                class="btn border-white text-white btn-flat btn-icon btn-rounded"><i
                                                         class="icon-plus3"></i></a>
 											<a href="#"
