comment sidebar temporarily

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,7 +32,7 @@
     <div class="page-content">
 
         <!-- Main sidebar -->
-        {{ include('::sidebar.html.twig') }}
+        {#{{ include('::sidebar.html.twig') }}#}
         <!-- /main sidebar -->
 
         <!-- Main content -->
