--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top bg-indigo">
+<div class="navbar navbar-inverse navbar-fixed-top bg-primary">
     <div class="navbar-header">
         <a class="navbar-brand" href="index.html"><img src="{{ asset('images/logo_light.png') }}" alt=""></a>
 
@@ -9,9 +9,9 @@
     </div>
 
     <div class="navbar-collapse collapse" id="navbar-mobile">
-        <ul class="nav navbar-nav">
+        {#<ul class="nav navbar-nav">
             <li><a class="sidebar-control sidebar-main-toggle hidden-xs"><i class="icon-paragraph-justify3"></i></a></li>
-        </ul>
+        </ul>#}
 
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Text link</a></li>
