--- a/app/Resources/views/page_header.html.twig
+++ b/app/Resources/views/page_header.html.twig
@@ -1,12 +1,11 @@
 <div class="page-header page-header-default">
     <div class="page-header-content">
         <div class="page-title">
-            <h4><i class="icon-arrow-left52 position-left"></i>
+            <h1><i class="icon-arrow-left52 position-left"></i>
                 <span class="text-semibold">{{ title }}</span>
                 {% if subTitle %} - {{ subTitle }}{% endif %}
-                &nbsp;
-                <span class="label label-{{ labelTitle.type }}">{{ labelTitle.name }}</span>
-            </h4>
+                &nbsp;<span class="label label-{{ labelTitle.type }}">{{ labelTitle.name }}</span>
+            </h1>
         </div>
 
         <div class="heading-elements">
@@ -15,7 +14,7 @@
         </div>
     </div>
 
-    <div class="breadcrumb-line">
+    {#<div class="breadcrumb-line">
         <ul class="breadcrumb">
             <li><a href="index.html"><i class="icon-home2 position-left"></i> Home</a></li>
             <li><a href="layout_fixed.html">Starters</a></li>
@@ -40,5 +39,5 @@
                 </ul>
             </li>
         </ul>
-    </div>
+    </div>#}
 </div>
