--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -101,15 +101,15 @@
                 <!-- /coaster details -->
                 <div class="sidebar-category">
                     <div class="category-title">
-                        <span>Egalement au {{ coaster.park.name }}
-                            &nbsp;<span class="badge badge-primary">{{ coaster.park.coasters|length - 1 }}</span>
+                        <span>Coasters de {{ coaster.park.name }}
+                            &nbsp;<span class="badge badge-primary">{{ coaster.park.coasters|length }}</span>
                         </span>
                         <ul class="icons-list">
                             <li><a href="#" data-action="collapse"></a></li>
                         </ul>
                     </div>
                     <div class="category-content">
-                        {% for otherCoaster in coaster.park.coasters if otherCoaster.id != coaster.id %}
+                        {% for otherCoaster in coaster.park.coasters %}
                             <div class="form-group">
                                 <a href="{{ path('bdd_show_coaster', {'slug': otherCoaster.slug}) }}">
                                     {{ otherCoaster.name }}
@@ -149,7 +149,7 @@
                             </div>
 
                             <div class="media-right media-middle">
-                                <i class="icon-meter-fast icon-3x opacity-75"></i>
+                                <i class="icon-rocket icon-3x opacity-75"></i>
                             </div>
                         </div>
                     </div>
