add search form

--- a/app/Resources/views/page_header.html.twig
+++ b/app/Resources/views/page_header.html.twig
@@ -9,8 +9,16 @@
         </div>
 
         <div class="heading-elements">
-            <a href="#" class="btn btn-labeled btn-labeled-right bg-blue heading-btn">Button <b><i
-                            class="icon-menu7"></i></b></a>
+            <form class="heading-form" action="#">
+                <div class="form-group">
+                    <div class="has-feedback">
+                        <input id="search-coaster" type="search" class="form-control" placeholder="Rechercher un coaster">
+                        <div class="form-control-feedback">
+                            <i class="icon-search4 text-size-small text-muted"></i>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 
