--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -23,22 +23,22 @@
                 </a>
             </li>
 
-            <li class="dropdown dropdown-user">
-                <a class="dropdown-toggle" data-toggle="dropdown">
-                    <img src="{{ asset('images/image.png') }}" alt="">
-                    <span>Victoria</span>
-                    <i class="caret"></i>
-                </a>
+            {#<li class="dropdown dropdown-user">#}
+                {#<a class="dropdown-toggle" data-toggle="dropdown">#}
+                    {#<img src="{{ asset('images/image.png') }}" alt="">#}
+                    {#<span>Victoria</span>#}
+                    {#<i class="caret"></i>#}
+                {#</a>#}
 
-                <ul class="dropdown-menu dropdown-menu-right">
-                    <li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>
-                    <li><a href="#"><i class="icon-coins"></i> My balance</a></li>
-                    <li><a href="#"><span class="badge badge-warning pull-right">58</span> <i class="icon-comment-discussion"></i> Messages</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#"><i class="icon-cog5"></i> Account settings</a></li>
-                    <li><a href="#"><i class="icon-switch2"></i> Logout</a></li>
-                </ul>
-            </li>
+                {#<ul class="dropdown-menu dropdown-menu-right">#}
+                    {#<li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>#}
+                    {#<li><a href="#"><i class="icon-coins"></i> My balance</a></li>#}
+                    {#<li><a href="#"><span class="badge badge-warning pull-right">58</span> <i class="icon-comment-discussion"></i> Messages</a></li>#}
+                    {#<li class="divider"></li>#}
+                    {#<li><a href="#"><i class="icon-cog5"></i> Account settings</a></li>#}
+                    {#<li><a href="#"><i class="icon-switch2"></i> Logout</a></li>#}
+                {#</ul>#}
+            {#</li>#}
         </ul>
     </div>
 </div>
