fix bug index link

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,6 +1,6 @@
 <div class="navbar navbar-inverse navbar-fixed-top bg-primary">
     <div class="navbar-header">
-        <a class="navbar-brand" href="index.html"><img src="{{ asset('images/logo_light.png') }}" alt=""></a>
+        <a class="navbar-brand" href="{{ path('bdd_index_coaster') }}"><img src="{{ asset('images/logo_light.png') }}" alt=""></a>
 
         <ul class="nav navbar-nav pull-right visible-xs-block">
             <li><a data-toggle="collapse" data-target="#navbar-mobile"><i class="icon-tree5"></i></a></li>
