--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,44 +1,16 @@
-<div class="navbar navbar-inverse navbar-fixed-top bg-primary">
+<div class="navbar navbar-inverse navbar-fixed-top bg-indigo">
     <div class="navbar-header">
         <a class="navbar-brand" href="{{ path('bdd_index_coaster') }}"><img src="{{ asset('images/logo_light.png') }}" alt=""></a>
-
-        <ul class="nav navbar-nav pull-right visible-xs-block">
-            <li><a data-toggle="collapse" data-target="#navbar-mobile"><i class="icon-tree5"></i></a></li>
-            <li><a class="sidebar-mobile-main-toggle"><i class="icon-paragraph-justify3"></i></a></li>
-        </ul>
     </div>
 
     <div class="navbar-collapse collapse" id="navbar-mobile">
-        {#<ul class="nav navbar-nav">
-            <li><a class="sidebar-control sidebar-main-toggle hidden-xs"><i class="icon-paragraph-justify3"></i></a></li>
-        </ul>#}
-
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Text link</a></li>
+            <li><a href="https://coastersworld.fr">Actualités</a></li>
+            <li><a href="https://forum.coastersworld.fr">Forum</a></li>
 
             <li>
-                <a href="#">
-                    <i class="icon-cog3"></i>
-                    <span class="visible-xs-inline-block position-right">Icon link</span>
-                </a>
+                <p class="navbar-text"><span class="label label-flat border-info text-info-600">BETA</span></p>
             </li>
-
-            {#<li class="dropdown dropdown-user">#}
-                {#<a class="dropdown-toggle" data-toggle="dropdown">#}
-                    {#<img src="{{ asset('images/image.png') }}" alt="">#}
-                    {#<span>Victoria</span>#}
-                    {#<i class="caret"></i>#}
-                {#</a>#}
-
-                {#<ul class="dropdown-menu dropdown-menu-right">#}
-                    {#<li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>#}
-                    {#<li><a href="#"><i class="icon-coins"></i> My balance</a></li>#}
-                    {#<li><a href="#"><span class="badge badge-warning pull-right">58</span> <i class="icon-comment-discussion"></i> Messages</a></li>#}
-                    {#<li class="divider"></li>#}
-                    {#<li><a href="#"><i class="icon-cog5"></i> Account settings</a></li>#}
-                    {#<li><a href="#"><i class="icon-switch2"></i> Logout</a></li>#}
-                {#</ul>#}
-            {#</li>#}
         </ul>
     </div>
 </div>
